# TimeSnap

./: .gitignore  compose.yml  package-lock.json  package.json  readme.md
.github/workflows/: release.yml  tauri-release.yml
.husky/: pre-commit
dashboard/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
dashboard/src/: main.rs
desktop/: README.md  eslint.config.mjs  package-lock.json  package.json
desktop/.husky/: pre-commit
desktop/sidecar-app/: package.json  rename.js
desktop/src/: App.css  App.tsx  types.ts  types.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/core/components/: Button.tsx  Header.tsx  Input.tsx  Menu.tsx  SideBar.tsx  Toast.tsx  checkbox.tsx
example/: .gitignore  Cargo.toml
example/src/: keyboard_type.rs  main.rs  screen_capture_xcap.rs  screenshot_scrap.rs
nginx/: Dockerfile  nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf  readme.md
server/: .env  Cargo.toml  Dockerfile  readme.md
server/src/: controllers.rs  main.rs  middlewares.rs  models.rs  routes.rs  utils.rs
server/static/: forgotpass.html  signup.html
sidecar-app/: index.js  package-lock.json  package.json  rename.js
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
tauri-app/: eslint.config.mjs  global.d.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: App.css  App.tsx  main.tsx  types.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
(+38 files in other folders)
