[package]
name = "time-snap"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
uuid = { version = "1", features = ["v4"] }
actix-multipart = "0.6"
futures-util = "0.3"
jsonwebtoken = "9"
chrono = "0.4"
dotenvy = "0.15"
actix-cors = "0.7.1"
